[package]
name = "cubby"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.10.1", features = ["serde"] }
rand = { version = "0.9.2", optional = true }
roaring = { version = "0.11.2", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
serde = { version = "1.0.226", features = ["derive"] }
thiserror = "2.0.16"

[dev-dependencies]
rand = "0.9.2"

[features]
default = ["memory", "kv"]
memory = []
kv = ["rusqlite", "rand"]
